--- a/Shop/src/app/home/home.component.html
+++ b/Shop/src/app/home/home.component.html
@@ -1,13 +1,29 @@
-<p>home works!</p>
 <div class=container>
 
 
 <div *ngFor = "let product of products" class="item">
-   {{product.id}}   {{product.name}}   {{product.brand}}  {{product.size}}   {{product.price}}   {{product.ratings}}  {{product.category}}  {{product.color}}
-    <img src='assets/images/{{product.image}}'>
-    <a (click) = "moreDetails(product.id)" routerLink = "active">More Details</a>
-    <br>
-    <button (click) = "addtoWishList(product.id)" mat-raised-button color="primary">Add to Wish List</button>
-</div>
+    <mat-card class="example-card">
+        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>Shiba Inu</mat-card-title>
+        <img mat-card-image src='assets/images/{{product.image}}' alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>This card has divider and indeterminate progress as footer</p>
+          <p>{{ product.brand}}</p>
+        </mat-card-content>
+        <mat-divider inset></mat-divider>
+        <div class="center">
+        <mat-card-actions>
+            <a  mat-button (click) = "moreDetails(product.id)" routerLink = "active">More Details</a>
+    <a *ngIf="isLoggedin"  mat-button (click) = "addtoWishList(product.id)" mat-raised-button color="primary">Add to Wish List</a>
+
+        </mat-card-actions>
+    </div>
+        <mat-card-footer>
+          <mat-progress-bar mode="buffer"></mat-progress-bar>
+        </mat-card-footer>
+      </mat-card>
+   <!-- {{product.id}}   {{product.name}}   {{product.brand}}  {{product.size}}   {{product.price}}   {{product.ratings}}  {{product.category}}  {{product.color}} -->
+    
+    </div>
 
 </div>
