--- a/Shop/src/app/home/home.component.css
+++ b/Shop/src/app/home/home.component.css
@@ -1,5 +1,7 @@
-button {
-    margin-left: 600px;
+div {
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* .app-products {
